# neuralnyx

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md
examples/: mnist.rs  sine.rs  tictactoe.rs
src/: generation.rs  lib.rs  neuralnet.rs  neuralnet.wgsl  optimizer.rs  pipeline.rs  pretrained.rs  structure.rs  types.rs  utils.rs
tests/: test_neuralnet.rs
