[package]
name = "neuralnyx"
version = "0.1.1"
edition = "2021"
exclude = [
    "examples/*",
    "tests/*",
]
description = "A simple neural network from scratch!"
readme = "README.md"
license = "MIT"
repository = "https://github.com/alternyxx/neuralnyx"
keywords = ["neural-network"]
# dk for categories honestly

[dependencies]
bytemuck = "1.22.0"
indoc = "2"
# env_logger = "0.11.7" # i mean is this necessary
futures-intrusive = "0.5.0"
pollster = "0.4.0"
rand = "0.9.0"
wgpu = "24.0.1"
rand_distr = "0.5.1"
textwrap = "0.16" # i plan to switch to textwrap-macros but not rn

[dev-dependencies]
curl = "0.4.47" # for downloading mnist dataset that's a .json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"